@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-08-18] RFC4880: added list() for TMCG_OpenPGP_Keyring
 * [2018-08-17] RFC4880: added types and functions for use of secure memory
 * [2018-08-16] init_libTMCG(): added parameter to enforce use of secure memory
 * [2018-08-15] RFC4880: added Asymmetric[De|En]cryptECDH() from RFC 6637
